tests/ui/traits/next-solver/overflow/recursive-self-normalization.stderr
error[E0275]: overflow evaluating the requirement `<T as Foo>::Assoc: Bar`
  --> $DIR/recursive-self-normalization.rs:11:17
   |
LL |     needs_bar::<T::Assoc>();
   |                 ^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`recursive_self_normalization`)
note: required by a bound in `needs_bar`
  --> $DIR/recursive-self-normalization.rs:8:17
   |
LL | fn needs_bar<S: Bar>() {}
   |                 ^^^ required by this bound in `needs_bar`

error[E0275]: overflow evaluating the requirement `<T as Foo>::Assoc`
  --> $DIR/recursive-self-normalization.rs:11:5
   |
LL |     needs_bar::<T::Assoc>();
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`recursive_self_normalization`)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
